# x-ai-job-monitor

./: .gitignore  Makefile  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml  monitor.yml
data/: latest_jobs.csv  raw_posts.jsonl
docs/: session-log.md
reports/: latest_jobs.md
scripts/: check_secrets.py
tests/: test_metadata.py  test_normalize.py  test_query.py  test_render.py  test_security.py  test_state.py
tests/fixtures/: search_recent_response.json
x_job_monitor/: __init__.py  cli.py  client.py  config.py  logging_utils.py  metadata.py  models.py  normalize.py  query.py  render.py  state.py
